# hsm-crypto

./: .gitignore  CMakeLists.txt  Changelog.md  README.md  SDFCryptoProvider.cpp  SDFCryptoProvider.h  TestSDF.cpp  install.sh
.github/workflows/: workflow.yml
cmake/: Options.cmake  ProjectHSM.cmake  ProjectSDF.cmake
hsm/: CMakeLists.txt  Common.h  CryptoProvider.h  SDFCryptoProvider.cpp  SDFCryptoProvider.h  gmt0018.h
hsm/sdf/: SDFCryptoProvider.cpp  SDFCryptoProvider.h
sdf/: CMakeLists.txt  SDFCryptoProvider.cpp  SDFCryptoProvider.h
test/: CMakeLists.txt  TestSDF.cpp  testVerifyAndHash.cpp
