cmake_minimum_required(VERSION 3.10)
project(HSM-CRYPTO VERSION "1.1.0")
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/output)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${EXECUTABLE_OUTPUT_PATH})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${EXECUTABLE_OUTPUT_PATH})
set(HSM_CRYPTO_CMAKE_DIR "${CMAKE_CURRENT_LIST_DIR}/cmake" CACHE PATH "The path to the cmake directory")
list(APPEND CMAKE_MODULE_PATH ${HSM_CRYPTO_CMAKE_DIR})
include_directories("${CMAKE_SOURCE_DIR}")
include(Options)
print_config(${PROJECT_NAME})

if(BUILD_SDF)
    include(ProjectSDF)
    add_subdirectory(hsm)
    if(NOT BUILD_STATIC)
    add_subdirectory(test)
    endif()
endif()
