if(BUILD_SDF)
    file(GLOB_RECURSE HEADERS "*.h")
    file(GLOB_RECURSE SRC_LIST "*.cpp")
    if(BUILD_STATIC)
        list(APPEND SRC_LIST ${INSERT_SOURCES})
        add_library(sdf-crypto_arm STATIC ${SRC_LIST} ${HEADERS})
        target_link_libraries(sdf-crypto_arm PUBLIC SDF)
    else()
        add_library(sdf-crypto_arm SHARED ${SRC_LIST} ${HEADERS})
        target_link_libraries(sdf-crypto_arm PUBLIC SDF)
    endif()
endif()
