file(GLOB_RECURSE HEADERS "*.h")
file(GLOB_RECURSE SRC_LIST "*.cpp")
list(APPEND SRC_LIST ${INSERT_SOURCES})

EXECUTE_PROCESS(COMMAND uname -m COMMAND tr -d '\n' OUTPUT_VARIABLE ARCHITECTURE)

set(LIBRARY_NAME "sdf-crypto")

add_library(${LIBRARY_NAME} ${SRC_LIST} ${HEADERS})
target_link_libraries(${LIBRARY_NAME} ${CMAKE_DL_LIBS})

include(InstallConfig)

install(
    TARGETS ${LIBRARY_NAME}
    EXPORT "${TARGETS_EXPORT_NAME}"
    LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
    ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
    RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
    INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/hsm"
)
