file(GLOB HEADERS "*.h")
file(GLOB SRC_LIST "*.cpp")
add_executable(test-sdf-crypto ${SRC_LIST} ${HEADERS})
EXECUTE_PROCESS(COMMAND uname -m COMMAND tr -d '\n' OUTPUT_VARIABLE ARCHITECTURE)
set(LIBRARY_NAME "sdf-crypto")
find_library(SDF_CRYPTO_LIB NAMES sdf-crypto PATHS /home/fisco1/hsm-crypto/output)
if (SDF_CRYPTO_LIB)
    target_link_libraries(test-sdf-crypto PUBLIC ${SDF_CRYPTO_LIB} pthread ${CMAKE_DL_LIBS})
else ()
    message(FATAL_ERROR "sdf-crypto library not found!")
endif ()